Fix overlapping text in Financials key section

--- a/src/views/annual-report/annual-report.scss
+++ b/src/views/annual-report/annual-report.scss
@@ -2207,6 +2207,7 @@ p {
 
         .key {
             width: 264px;
+            margin-right: 1rem;
         }
 
         .total {
